# docsLoader

./: .env  .env.example  .gitignore  README.md  compare_retrievals_weaviate_vs_postgres.py  delete_documents_postgres.py  delete_documents_weaviate.py  docsToGraphRAG.py  evaluateVerdict.py  generate_retrieval_dataset_from_appointments.py  init_knowledge_graph.py  init_knowledge_graph_pgvector.py  init_knowledge_graph_postgres.py  init_medkard_table.py  medkard_postgres.py  pyproject.toml  requirements.py  requirements.txt  reset_graph_rag.py  retrieval_test_queries.generated.txt  retrieval_test_queries.txt  run_file_verdict_to_db_pipeline.py  run_testjson_pipeline.py  test_1c_connection.py  testjson.json  validate_appointment_pipeline.py
docs/: HOW_IT_WORKS.md  USAGE.md
docs/scripts/: evaluate_verdict.md  init_knowledge_graph.md  reset_graph_rag.md  validate_appointment_pipeline.md
engine/: ingestion.py  ingestion_adapter.py  models.py  postgres.py  retrieval.py  storage.py  utils.py
engine/graphrag/: __init__.py  pgvector_age_adapter.py  ports.py  postgres_dsn.py  retrieval_service.py  weaviate_adapter.py
engine/integrations/one_c/: __init__.py  client.py
engine/llm/: appointment_judge.py
engine/postgres/: __init__.py  storage.py
engine/postgres/queries/: __init__.py
engine/postgres/queries/delete/: __init__.py  documents.py  graph.py
engine/postgres/queries/insert/: __init__.py  (+1 more)
engine/weaviate/: __init__.py  ingestion_adapter.py  storage.py  storage_queries.py  storage_upsert.py
graphrag_weaviate/: appointments.py  cli.py  config.py  ingestion.py  judge.py  logging_utils.py  models.py  retrieval.py  storage.py  storage_deletion.py  storage_queries.py  storage_upsert.py  utils.py
graphrag_weaviate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
graphrag_weaviate/integrations/one_c/: __init__.py  client.py
graphrag_weaviate/llm/: __init__.py  appointment_judge.py
sql/: init_medkard.sql
tools/init_kg/: init_knowledge_graph.py
tools/visit_validator/: validate_visit.py  visit.sample.json
(+2 files in other folders)
