[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-weaviate"
version = "0.1.0"
description = "Internal pipeline for validating Russian clinic appointment data against MKB-scoped clinical recommendations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "weaviate-client>=4.10.0",
  "langchain-ollama>=0.2.0",
  "pymupdf>=1.24.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "psycopg2-binary>=2.9.9",
]

[tool.setuptools]
packages = ["engine", "engine.llm", "engine.graphrag", "engine.integrations", "engine.integrations.one_c", "engine.weaviate", "engine.postgres", "engine.postgres.queries", "engine.postgres.queries.insert", "engine.postgres.queries.delete", "engine.postgres.queries.search"]
